k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: northamerica-northeast1-docker.pkg.dev/pdcp-cloud-005-safeinputs/safeinputs/api:main-8ee9743-1715622612 # {"$imagepolicy": "flux-system:api"}
          # image: northamerica-northeast1-docker.pkg.dev/pdcp-cloud-005-safeinputs/safeinputs/api:main-49b1120-1677095699 # {"$imagepolicy": "flux-system:api"}

          securityContext:
            # No new privs for process or it's children
            # https://github.com/kubernetes/design-proposals-archive/blob/main/auth/no-new-privs.md
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: 300m
              memory: 70Mi
            requests:
              cpu: 300m
              memory: 70Mi
status: {}
