k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: api
spec:
  ports:
    - name: http-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: api
  type: ClusterIP
status:
  loadBalancer: {}
